[gd_scene load_steps=17 format=2]

[ext_resource path="res://Gui/SetupBoard.gd" type="Script" id=1]
[ext_resource path="res://Gui/Chessopath.stylebox" type="StyleBox" id=2]
[ext_resource path="res://Images/Chess_kd.svg" type="Texture" id=3]
[ext_resource path="res://Images/Chess_qd.svg" type="Texture" id=4]
[ext_resource path="res://Images/Chess_rd.svg" type="Texture" id=5]
[ext_resource path="res://Images/Chess_bd.svg" type="Texture" id=6]
[ext_resource path="res://Images/Chess_nd.svg" type="Texture" id=7]
[ext_resource path="res://Images/Chess_pd.svg" type="Texture" id=8]
[ext_resource path="res://Images/Chess_kl.svg" type="Texture" id=9]
[ext_resource path="res://Images/Chess_ql.svg" type="Texture" id=10]
[ext_resource path="res://Images/Chess_rl.svg" type="Texture" id=11]
[ext_resource path="res://Images/Chess_bl.svg" type="Texture" id=12]
[ext_resource path="res://Images/Chess_nl.svg" type="Texture" id=13]
[ext_resource path="res://Images/Chess_pl.svg" type="Texture" id=14]

[sub_resource type="ButtonGroup" id=1]

resource_local_to_scene = true

[sub_resource type="ButtonGroup" id=2]

resource_local_to_scene = true
_sections_unfolded = [ "Resource" ]

[node name="SetupBoard" type="MarginContainer"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )
_sections_unfolded = [ "Anchor", "Margin", "Size Flags", "custom_constants" ]

[node name="PanelContainer" type="PanelContainer" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 8.0
margin_right = 504.0
margin_bottom = 268.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/panel = ExtResource( 2 )
_sections_unfolded = [ "Margin", "custom_styles" ]

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 3.0
margin_top = 3.0
margin_right = 493.0
margin_bottom = 265.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Margin", "Rect" ]

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer/VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 490.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
use_top_left = false

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer/CenterContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 133.0
margin_right = 357.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="Side" type="Label" parent="PanelContainer/VBoxContainer/CenterContainer/HBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 5.0
margin_right = 88.0
margin_bottom = 19.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Side to move:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_constants" ]

[node name="WhiteCB" type="CheckBox" parent="PanelContainer/VBoxContainer/CenterContainer/HBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 92.0
margin_right = 158.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
pressed = true
enabled_focus_mode = 2
shortcut = null
group = SubResource( 1 )
text = "White"
flat = false
align = 0

[node name="BlackCB" type="CheckBox" parent="PanelContainer/VBoxContainer/CenterContainer/HBoxContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 162.0
margin_right = 224.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = SubResource( 1 )
text = "Black"
flat = false
align = 0

[node name="Selector" type="GridContainer" parent="PanelContainer/VBoxContainer" index="1"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 7.0
margin_top = 28.0
margin_right = 483.0
margin_bottom = 172.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 4
size_flags_vertical = 4
columns = 6
_sections_unfolded = [ "Focus", "Hint", "Mouse", "Size Flags" ]

[node name="BK" type="Button" parent="PanelContainer/VBoxContainer/Selector" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 76.0
margin_bottom = 70.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
pressed = true
action_mode = 0
enabled_focus_mode = 2
shortcut = null
group = SubResource( 2 )
icon = ExtResource( 3 )
flat = false
align = 1
_sections_unfolded = [ "Mouse" ]

[node name="BQ" type="Button" parent="PanelContainer/VBoxContainer/Selector" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 80.0
margin_right = 156.0
margin_bottom = 70.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = SubResource( 2 )
icon = ExtResource( 4 )
flat = false
align = 1

[node name="BR" type="Button" parent="PanelContainer/VBoxContainer/Selector" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 160.0
margin_right = 236.0
margin_bottom = 70.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = SubResource( 2 )
icon = ExtResource( 5 )
flat = false
align = 1

[node name="BB" type="Button" parent="PanelContainer/VBoxContainer/Selector" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 240.0
margin_right = 316.0
margin_bottom = 70.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = SubResource( 2 )
icon = ExtResource( 6 )
flat = false
align = 1

[node name="BN" type="Button" parent="PanelContainer/VBoxContainer/Selector" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 320.0
margin_right = 396.0
margin_bottom = 70.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = SubResource( 2 )
icon = ExtResource( 7 )
flat = false
align = 1

[node name="BP" type="Button" parent="PanelContainer/VBoxContainer/Selector" index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 400.0
margin_right = 476.0
margin_bottom = 70.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = SubResource( 2 )
icon = ExtResource( 8 )
flat = false
align = 1

[node name="WK" type="Button" parent="PanelContainer/VBoxContainer/Selector" index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 74.0
margin_right = 76.0
margin_bottom = 144.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = SubResource( 2 )
icon = ExtResource( 9 )
flat = false
align = 1

[node name="WQ" type="Button" parent="PanelContainer/VBoxContainer/Selector" index="7"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 80.0
margin_top = 74.0
margin_right = 156.0
margin_bottom = 144.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = SubResource( 2 )
icon = ExtResource( 10 )
flat = false
align = 1

[node name="WR" type="Button" parent="PanelContainer/VBoxContainer/Selector" index="8"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 160.0
margin_top = 74.0
margin_right = 236.0
margin_bottom = 144.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = SubResource( 2 )
icon = ExtResource( 11 )
flat = false
align = 1

[node name="WB" type="Button" parent="PanelContainer/VBoxContainer/Selector" index="9"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 240.0
margin_top = 74.0
margin_right = 316.0
margin_bottom = 144.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = SubResource( 2 )
icon = ExtResource( 12 )
flat = false
align = 1

[node name="WN" type="Button" parent="PanelContainer/VBoxContainer/Selector" index="10"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 320.0
margin_top = 74.0
margin_right = 396.0
margin_bottom = 144.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = SubResource( 2 )
icon = ExtResource( 13 )
flat = false
align = 1

[node name="WP" type="Button" parent="PanelContainer/VBoxContainer/Selector" index="11"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 400.0
margin_top = 74.0
margin_right = 476.0
margin_bottom = 144.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = SubResource( 2 )
icon = ExtResource( 14 )
flat = false
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 176.0
margin_right = 490.0
margin_bottom = 200.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="CenterContainer2" type="CenterContainer" parent="PanelContainer/VBoxContainer/HBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 243.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
use_top_left = false

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer/HBoxContainer/CenterContainer2" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 22.0
margin_right = 220.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer/CenterContainer2/HBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 5.0
margin_right = 120.0
margin_bottom = 19.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 0
size_flags_vertical = 4
text = "Full move counter:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Size Flags" ]

[node name="FullMoveCounter" type="SpinBox" parent="PanelContainer/VBoxContainer/HBoxContainer/CenterContainer2/HBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 124.0
margin_right = 198.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 0
size_flags_vertical = 4
min_value = 1.0
max_value = 200.0
step = 1.0
page = 0.0
value = 1.0
exp_edit = false
rounded = false
editable = true
prefix = ""
suffix = ""
_sections_unfolded = [ "Size Flags" ]

[node name="CenterContainer4" type="CenterContainer" parent="PanelContainer/VBoxContainer/HBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 247.0
margin_right = 490.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
use_top_left = false

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer/HBoxContainer/CenterContainer4" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 29.0
margin_right = 213.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer/CenterContainer4/HBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 5.0
margin_right = 106.0
margin_bottom = 19.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
hint_tooltip = "Number of half moves done in relation to the 50 moves draw rule"
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 0
size_flags_vertical = 4
text = "Half move clock:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Hint", "Size Flags" ]

[node name="HalfMoveClock" type="SpinBox" parent="PanelContainer/VBoxContainer/HBoxContainer/CenterContainer4/HBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 110.0
margin_right = 184.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 0
size_flags_vertical = 4
min_value = 0.0
max_value = 99.0
step = 1.0
page = 0.0
value = 0.0
exp_edit = false
rounded = false
editable = true
prefix = ""
suffix = ""
_sections_unfolded = [ "Size Flags" ]

[node name="CenterContainer2" type="CenterContainer" parent="PanelContainer/VBoxContainer" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 204.0
margin_right = 490.0
margin_bottom = 228.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
use_top_left = false

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/VBoxContainer/CenterContainer2" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 490.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/CenterContainer2/HBoxContainer2" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 5.0
margin_right = 58.0
margin_bottom = 19.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Castling: "
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Size Flags" ]

[node name="CastlingQ" type="CheckBox" parent="PanelContainer/VBoxContainer/CenterContainer2/HBoxContainer2" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 62.0
margin_right = 101.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
hint_tooltip = "Can white still castle queen-side?"
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
text = "Q"
flat = false
align = 0
_sections_unfolded = [ "Hint", "Size Flags" ]

[node name="CastlingK" type="CheckBox" parent="PanelContainer/VBoxContainer/CenterContainer2/HBoxContainer2" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 105.0
margin_right = 141.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
hint_tooltip = "Can white still castle king-side?"
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
text = "K"
flat = false
align = 0
_sections_unfolded = [ "Hint", "Size Flags" ]

[node name="Castlingq" type="CheckBox" parent="PanelContainer/VBoxContainer/CenterContainer2/HBoxContainer2" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 145.0
margin_right = 181.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
hint_tooltip = "Can black still castle queen-side?"
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
text = "q"
flat = false
align = 0
_sections_unfolded = [ "Hint" ]

[node name="Castlingk" type="CheckBox" parent="PanelContainer/VBoxContainer/CenterContainer2/HBoxContainer2" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 185.0
margin_right = 220.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
hint_tooltip = "Can black still castle king-side?"
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
text = "k"
flat = false
align = 0
_sections_unfolded = [ "Hint", "Size Flags" ]

[node name="Empty" type="Label" parent="PanelContainer/VBoxContainer/CenterContainer2/HBoxContainer2" index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 224.0
margin_top = 5.0
margin_right = 264.0
margin_bottom = 19.0
rect_min_size = Vector2( 40, 0 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 4
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Margin", "Rect", "Size Flags" ]

[node name="Label2" type="Label" parent="PanelContainer/VBoxContainer/CenterContainer2/HBoxContainer2" index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 268.0
margin_top = 5.0
margin_right = 428.0
margin_bottom = 19.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "En passant target square:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="EPTarget" type="LineEdit" parent="PanelContainer/VBoxContainer/CenterContainer2/HBoxContainer2" index="7"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 432.0
margin_right = 490.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 1
size_flags_vertical = 1
align = 1
max_length = 2
focus_mode = 2
context_menu_enabled = true
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65
caret_position = 0
_sections_unfolded = [ "Caret", "Placeholder", "Rect", "custom_constants" ]

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/VBoxContainer" index="4"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 232.0
margin_right = 490.0
margin_bottom = 262.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 20
alignment = 0
_sections_unfolded = [ "custom_constants" ]

[node name="CenterContainer2" type="CenterContainer" parent="PanelContainer/VBoxContainer/HBoxContainer2" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 235.0
margin_bottom = 30.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
use_top_left = false
_sections_unfolded = [ "Size Flags", "Theme" ]

[node name="ClearAll" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer2/CenterContainer2" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 63.0
margin_right = 172.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 3
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Clear all pieces"
flat = false
align = 1

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer/VBoxContainer/HBoxContainer2" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 255.0
margin_right = 490.0
margin_bottom = 30.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
use_top_left = false
_sections_unfolded = [ "Size Flags" ]

[node name="InitPosition" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer2/CenterContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 45.0
margin_right = 189.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 3
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Setup initial position"
flat = false
align = 1

[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer2/CenterContainer2/ClearAll" to="." method="_on_ClearAll_pressed"]

[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer2/CenterContainer/InitPosition" to="." method="_on_InitPosition_pressed"]


